Undid status code change

--- a/plugins/threatminer/plugin.spec.yaml
+++ b/plugins/threatminer/plugin.spec.yaml
@@ -30,7 +30,7 @@ types:
   response:
     status_code:
       title: Status Code
-      type: string
+      type: int
       description: Status Code
       required: false
     status_message:
